# keray_shell

./: .gitignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  auto-imports.d.ts  build-macos.sh  components.d.ts  env.d.ts  eslint.config.ts  global.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: OPEN_SOURCE_CHECKLIST.md
scripts/: set-version.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: app_icon.rs  lib.rs  main.rs  os.rs  sftp.rs  ssh.rs  term.rs  utils.rs  window_glass.rs
src-tauri/src/dto/: res.rs
src/components/: CheckVersion.vue  Confirm.vue  DefaultMenuItems.vue  DefaultMenus.vue  GlobalButton.vue  GlobalLoadingText.vue  Icon.vue  PermissionEditor.vue  Prompt.vue  ServerList.vue  ServerTree.vue  ServerTreeRow.vue  SettingDialog.vue  SystemInput.vue  WindowTitleBar.vue
src/composables/: useBus.ts  useServerOverviewPolling.ts
src/directives/: sclick.ts
src/layout/: DefaultLayout.vue
src/stores/: app.ts  channelInstances.ts  config.ts  downloadStore.ts  keyEvent.ts  localstore.ts  serverData.ts  serverOverview.ts
src/utils/: confirmMessage.tsx  constant.ts  fontSize.ts  fsUtil.ts  index.ts  localFsUtils.ts  project.ts  serverOverviewPolling.ts  ui.ts  window.ts  windowGlass.ts
web-next/: eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
(+162 files in other folders)
