[package]
name = "keray_shell_rust"
version = "0.1.0"
description = "A Tauri SSH and SFTP desktop client."
authors = ["Keray"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keray_shell_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
rfd="0.17"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.60"
cbc = "0.1"
des = "0.8"
md5 = "0.7"
data-encoding = "2.6"
russh-sftp="2"
tokio = { version = "1", features = ["full"] }
once_cell = "1.21"
getset = "0.1"
log = "0.4"
strum_macros = "0.28"
uuid = { version = "1.18", features = ["v4"] }
tauri-plugin-log = "2"
arboard = "3"
key-lock = "0.1"
async-std = "1.13"
device_query = "4.0"
base64 = "0.22"
dirs = "6"
anyhow = "1.0.102"
font-kit = "0.14.3"
window-vibrancy = "0.6"
[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
objc = "0.2"

[target."cfg(windows)".dependencies]
aws-lc-sys = { version = "0.41", features = ["prebuilt-nasm"] }
windows-icons = "0.3"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi"] }
